--- a/CRUD_ReactJS_Spring/api/crud/src/main/resources/application.properties
+++ b/CRUD_ReactJS_Spring/api/crud/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=crud
 
 # Configs DB
 spring.datasource.url=jdbc:mysql://localhost:3306/cocayan_crud_users
-spring.datasource.username=eliascmurat
-spring.datasource.password=root@123
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Configs JPA
