--- a/CLOCK_Threads_Spring/clock/src/main/resources/application.properties
+++ b/CLOCK_Threads_Spring/clock/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Configs project
+spring.application.name=clock
 
+# Configs DB
+spring.datasource.url=jdbc:mysql://localhost:3306/cocayan_clock
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configs JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
